<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.zybooks.studyhelper.QuestionEditActivity">

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        android:labelFor="@+id/questionText"
        style="@style/QALabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/question_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        style="@style/QAEditText"
        app:layout_constraintTop_toTopOf="@id/questionLabel"
        app:layout_constraintBottom_toTopOf="@+id/answerText"
        app:layout_constraintLeft_toRightOf="@id/questionLabel"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_label"
        android:labelFor="@+id/answerText"
        style="@style/QALabel"
        app:layout_constraintTop_toTopOf="@+id/answerText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/answerText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/answer_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        style="@style/QAEditText"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/answerLabel"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveButtonClick"
        app:srcCompat="@drawable/check"
        android:contentDescription="@string/save_question"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>