<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noQuestionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context="com.zybooks.studyhelper.QuestionActivity">

        <TextView
            android:id="@+id/noQuestionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_questions"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addQuestionButton" />

        <Button
            android:id="@+id/addQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            android:onClick="addQuestionButtonClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showQuestionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context="com.zybooks.studyhelper.QuestionActivity">

        <TextView
            android:id="@+id/questionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_label"
            style="@style/QALabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/questionText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            tools:text="question"
            app:layout_constraintTop_toTopOf="@id/questionLabel"
            app:layout_constraintBottom_toTopOf="@+id/answerButton"
            app:layout_constraintLeft_toRightOf="@id/questionLabel"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/answerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/show_answer"
            android:onClick="answerButtonClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/answerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_label"
            style="@style/QALabel"
            app:layout_constraintTop_toBottomOf="@+id/answerButton"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/answerText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            tools:text="answer"
            app:layout_constraintTop_toTopOf="@id/answerLabel"
            app:layout_constraintLeft_toRightOf="@id/answerLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>